Feat: mcp/a2a, chat history, flow retrieval
Feat: add celery

Fix: add resources for A2A/MCP, chat history, pagination

Fix: inconsistencies

Fix: rework /active EP, missing features

Fix: a2a/mcp/flow retrieval

Fix: missing user_model

Fix: cleanup

Fix: cleanup

Fix: simplify ML message payload

Fix: WS ep

Fix: add posix timestamp to message

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "cryptocode>=0.1",
     "greenlet>=3.1.1", # explicit dependency required for mac
     "tenacity>=9.1.2",
+    "mcp[cli]>=1.9.0",
+    "celery-singleton>=0.3.1",
 ]
 
 [dependency-groups]
