--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,12 @@ services:
     volumes:
         - ./backend/scripts/postgres.conf:/etc/postgresql/postgresql.conf
         - postgres-volume:/var/lib/postgresql/data
-
+  redis:
+    image: redis:7
+    ports:
+      - 6379:6379
+    volumes:
+      - redis-data:/data
   migration_svc:
     build:
       context: ./backend
@@ -85,3 +90,4 @@ services:
 volumes:
   postgres-volume:
   shared-files-volume:
+  redis-data:
