--- a/master-agent/pyproject.toml
+++ b/master-agent/pyproject.toml
@@ -5,6 +5,7 @@ description = "Python Master Agent for GenAI Agentos infrastructure"
 requires-python = ">=3.12"
 dependencies = [
     "genai-protocol",
+    "httpx>=0.28.1",
     "jmespath>=1.0.1",
     "langchain>=0.3.21",
     "langchain-ollama>=0.3.1",
