--- a/master-agent/pyproject.toml
+++ b/master-agent/pyproject.toml
@@ -4,6 +4,7 @@ version = "1.0.0"
 description = "Python Master Agent for GenAI Agentos infrastructure"
 requires-python = ">=3.12"
 dependencies = [
+    "a2a-sdk>=0.2.5",
     "genai-protocol",
     "httpx>=0.28.1",
     "jmespath>=1.0.1",
@@ -12,6 +13,7 @@ dependencies = [
     "langchain-openai>=0.3.10",
     "langgraph>=0.3.20",
     "loguru>=0.7.3",
+    "mcp[cli]>=1.9.2",
     "pydantic>=2.10.6",
     "pydantic-settings>=2.8.1",
     "websockets>=15.0.1",
