Add execution time to trace for all agent types

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,8 @@ services:
   migration_svc:
     build:
       context: ./backend
+    depends_on:
+      - postgres
     env_file:
       - .env
     networks:
