--- a/tests/pyproject.toml
+++ b/tests/pyproject.toml
@@ -5,18 +5,24 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "a2a-sdk>=0.2.6",
     "aiofiles>=24.1.0",
     "aiohappyeyeballs>=2.6.1",
     "aiohttp>=3.11.18",
     "aiosignal>=1.3.2",
     "annotated-types>=0.7.0",
+    "asyncpg>=0.30.0",
     "attrs>=25.3.0",
     "faker>=37.1.0",
     "frozenlist>=1.6.0",
     "genai-protocol",
+    "google-adk>=1.2.1",
+    "google-genai>=1.19.0",
+    "greenlet>=3.2.3",
     "gtts>=2.5.4",
     "httpx>=0.28.1",
     "loguru>=0.7.3",
+    "mcp[cli]>=1.9.3",
     "multidict==6.4.3",
     "opencv-python>=4.11.0.86",
     "pillow>=11.2.1",
@@ -29,6 +35,7 @@ dependencies = [
     "pytest-html>=4.1.1",
     "python-docx>=1.1.2",
     "reportlab>=4.4.0",
+    "sqlalchemy>=2.0.41",
     "typer>=0.15.3",
     "typing-inspection==0.4.0",
     "websockets==15.0.1",
