--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,7 +52,8 @@
     "tailwindcss": "3.4.17",
     "ts-jest": "^29.3.2",
     "typescript": "^5.5.4",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "jest": {
     "preset": "ts-jest",
