--- a/master-agent/pyproject.toml
+++ b/master-agent/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "httpx>=0.28.1",
     "jmespath>=1.0.1",
     "langchain>=0.3.21",
+    "langchain-google-genai>=2.1.6",
     "langchain-ollama>=0.3.1",
     "langchain-openai>=0.3.10",
     "langgraph>=0.3.20",
