--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^18.3.1",
+    "react-cookie": "^8.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.2",
